--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "weathercityid",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "中国行政区编码和天气api城市编码",
   "main": "index.js",
   "scripts": {
     "run-test": "node ./test/test.js",
-    "run-build": "node ./src/main.js",
+    "run-build": "node ./src/build.js",
     "build-test": "tsc -p ./test/tsconfig.json",
     "re-test": "tsc -p ./test/tsconfig.json&&node ./test/test.js"
   },
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/LiuQixuan/weatherCityId#readme",
   "devDependencies": {
+    "js-beautify": "^1.13.13",
     "typescript": "^4.2.4"
   }
 }
